<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--
    <SwitchPreference
        android:defaultValue="false"
        android:key="rotate"
        android:summary="@string/pref_description_rotate"
        android:title="@string/pref_title_rotate" />
    -->

    <SwitchPreference
        android:defaultValue="true"
        android:key="disable_sound"
        android:summary="@string/pref_description_silent"
        android:title="@string/pref_title_silent" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="start_maps_in_background"
        android:summary="@string/pref_description_start_maps_in_background"
        android:title="@string/pref_title_start_maps_in_background" />

    <Preference
        android:key="delete_recordings"
        android:summary="@string/pref_description_delete_recordings"
        android:title="@string/pref_delete_recordings" />

</PreferenceScreen>
