<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.opendashcam.WelcomeActivity$FirstFragment">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_widgets_heading"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginBottom="7dp"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text='Touch the red "REC" widget to continue'
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_automatic_heading"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginBottom="23dp"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/recording_automatic_desc"
        android:textAlignment="viewStart"
        android:layout_toEndOf="@+id/space" />

    <ImageView
        android:id="@+id/demo_rec_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/cam_widget" />

    <Space
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/demo_rec_widget"
        android:id="@+id/space" />

</RelativeLayout>
