<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.opendashcam.WelcomeActivity$FirstFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_widgets_view_rec_desc"
        android:textAlignment="textEnd"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="8dp"
        android:layout_toEndOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/demo_rec_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.2"
        android:adjustViewBounds="false"
        app:srcCompat="@drawable/cam_widget"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/view_recordings_widget"
        android:layout_above="@+id/imageView3"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="14dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        app:srcCompat="@drawable/save_recording_widget"
        android:layout_above="@+id/demo_rec_widget"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/end_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/btn_start_driving"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:layout_marginBottom="12dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_widgets_save_rec_desc"
        android:textAlignment="textEnd"
        android:layout_alignTop="@+id/imageView3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/imageView2" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView7"
        android:layout_toEndOf="@+id/imageView3" />

</RelativeLayout>
